--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,19 +10,20 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.utkarshgoel.EatAnywhere.MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.utkarshgoel.EatAnywhere.signIn" />
-        <activity android:name="com.example.utkarshgoel.EatAnywhere.signUp" />
+        <activity android:name=".signIn" />
+        <activity android:name=".signUp" />
         <activity
-            android:name="com.example.utkarshgoel.EatAnywhere.Home"
+            android:name=".Home"
             android:label="@string/title_activity_home"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
+        <activity android:name=".FoodList"></activity>
     </application>
 
 </manifest>
