--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:28.0.0'
+    compile 'com.cepheuen.elegant-number-button:lib:1.0.2'
     compile 'com.android.support.constraint:constraint-layout:1.1.3'
     compile 'com.google.firebase:firebase-core:16.0.1'
     compile 'com.android.support:design:28.0.0'
