--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,17 +23,28 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:28.0.0'
+
     compile 'com.cepheuen.elegant-number-button:lib:1.0.2'
+
     compile 'com.android.support.constraint:constraint-layout:1.1.3'
+
     compile 'com.google.firebase:firebase-core:16.0.1'
+    compile 'com.google.firebase:firebase-database:16.0.1'
+    compile 'com.firebaseui:firebase-ui-database:4.2.0'
+
     compile 'com.android.support:design:28.0.0'
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test:runner:1.0.2'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.2'
-    compile 'com.google.firebase:firebase-database:16.0.1'
+
+
     compile 'info.hoang8f:fbutton:1.0.5'
     compile 'com.rengwuxian.materialedittext:library:2.1.4'
-    compile 'com.firebaseui:firebase-ui-database:4.2.0'
     compile 'com.squareup.picasso:picasso:2.71828'
+
+    compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
+
+
 }
 apply plugin: 'com.google.gms.google-services'
